[tool.poetry]
name = "gwork"
version = "0.1.0"
description = "Umbrella Project for work on calume graph*-3.0 update"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis-sygroup.ch>"]

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
